--- a/_sass/_utilities.scss
+++ b/_sass/_utilities.scss
@@ -602,4 +602,10 @@ figure.cover {
 
 mjx-container[jax="CHTML"][display="true"] {
   overflow-x: auto;
+  overflow-y: hidden;
+  scrollbar-width: none;          /* Firefox */
+  -ms-overflow-style: none;       /* IE/Edge */
+  &::-webkit-scrollbar {
+    display: none;                 /* Chrome/Safari */
+  }
 }
